<resources>
    <string name="app_name">Katwalk</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="tvWelcome">Brag about your latest purchase.\nSee what others got.</string>
    <string name="tvSplashScreenDescription">Splash Screen shown while loading</string>
    <string name="tvLoginTitle">Log In to Katwalk!</string>
    <string name="bLoginLoginPage">LOG IN</string>
    <string name="ifLoginUsernameHint">First and Last Name</string>
    <string name="ifLoginEmailHint">Email Address</string>
    <string name="ifLoginPasswordHint">Password</string>
    <string name="ifLoginPasswordRepeatHint">Repeat Password</string>
    <string name="tvOrLoginPage">Or</string>
    <string name="tvForgottenPasswordLoginPage">Forgotten Password</string>
    <string name="etForgottenPasswordEmailHint">Enter Your Email</string>
    <string name="bCancelForgottenPasswordDialog">Cancel</string>
    <string name="bSubmitForgottenPasswordDialog">Submit</string>
    <string name="tvSignupTitle">Sign Up To Katwalk!</string>
    <string name="tvBraggr">Katwalk</string>
    <string name="rgSexMale">Male</string>
    <string name="rgSexFemale">Female</string>
    <string name="bSubmitSignupPage">SIGN UP</string>
    <string name="spCountrySpinnerPrompt">Please, select your country</string>
    <string name="spCitySpinnerPrompt">Please, select your nearest city</string>
    <string name="ibAvatarUploadText">Upload a photo</string>
    <string name="ivUserAvatarContentDescription">User Image</string>
    <string name="bTakeAPhoto">Take A Photo</string>
    <string name="bSelectPhotoFromFile">Select From Files</string>
    <string name="bCancelImageUpload">Cancel</string>
    <string name="bDeleteImage">Delete Image</string>
    <string name="cbUserAgreesWithTermsOfUse">I agree with the Terms of Use</string>
    <string name="abSearch">Search</string>
    <string name="abSettings">Settings</string>
    <string name="abFeed">Feed</string>
    <string name="abNotifications">Notifications</string>
    <string name="abAddNewItem">Add New Item</string>
    <string name="contentDescriptionHomeIcon">Home</string>
    <string name="ivFeedItemImageDescription">Items Feed Item Icon</string>
    <string name="tvItemsFeedItemNameDefault">Product Name Here</string>
    <string name="tvItemsFeedItemActionDefault">now available at</string>
    <string name="tvItemsFeedItemActorDefault">Default Place</string>
    <string name="tvItemsFeedItemTimeStampDefault">2 minutes ago</string>
    <string name="bItemsFeedActionButtonRate">Rate</string>
    <string name="bItemsFeedActionButtonComment">Comment</string>
    <string name="bItemsFeedActionButtonFollow">Follow</string>
    <string name="bItemsFeedActionButtonEnvy">Envy</string>
    <string name="bItemsFeedActionButtonSell">Sell</string>
    <string name="bPeopleFeedActionButtonAddFriend">Add Friend</string>
    <string name="bPeopleFeedActionButtonMessage">Message</string>
    <string name="bPeopleFeedActionButtonBuy">Buy</string>
    <string name="tvItemIsAvailableAtPlace"> is available at </string>
    <string name="tvItemHasBeenRatedBy"> has been rated by </string>
    <string name="tvItemsFeedItemHasBeenRatedByUserName"></string>
    <string name="tvItemsFeedItemHasBeenRatedByRatingValue">His Rating: </string>
    <string name="tvItemsFeedItemHasBeenRatedByRatingGlobalValue">Global Rating: </string>
    <string name="ivFeedUserImageDescription">Image of the user</string>
    <string name="tvItemHasBeenCommentedBy">has been commented by</string>
    <string name="tvItemsFeedItemHasBeenCommentedByUserName"></string>
    <string name="tvItemsFeedItemHasBeenCommentedByCommentContent">His comment: to make the ImageView resize itself to fit the rescaled image. For example, if you have a rectangular image in what would normally be a square ImageView, adjustViewBounds=true will make it resize the ImageView to be rectangular as well. This then affects how other Views are laid out around the ImageView.</string>
    <string name="tvItemsFeedItemHasBeenCommentedByViewAllComments">View all comments</string>
    <string name="iFeedItemHasBeenCommentedByUserImageDescription">Image of the user that commented the item</string>
    <string name="tvItemsFeedItemHasBeenCommentedByTimeStamp">2 minutes ago</string>
    <string name="tvItemIsNowAmongTheItemsOf"> is now among the items of </string>
    <string name="tvItemIsNowAmongTheItemsOfUserName"></string>
    <string name="tvItemsFeedItemIsNowAmongTheItemsOfTimeStamp">2 minutes ago</string>
    <string name="tvItemIsBeingSoldBy"> is being sold by </string>
    <string name="tvItemsFeedItemIsNowBeingSoldByTimeStamp">2 minutes ago</string>
    <string name="tvItemsFeedItemIsNowBeingSoldByForAmount">Price $230</string>
    <string name="tvItemsFeedItemIsNowBeingSoldByAtCityCountry">in Sofia, Bulgaria</string>
    <string name="tvItemIsBeingOfferedAt"> is now offered at </string>
    <string name="tvItemFeedItemIsNowBeingOfferedAtItemName">Samsung Galaxy</string>
    <string name="tvItemFeedItemIsNowBeingOfferedAtPlaceName">The Grand Mall</string>
    <string name="tvItemsFeedItemIsNowBeingOfferedAtTimeStamp">2 minutes ago</string>
    <string name="tvItemsFeedItemIsNowBeingOfferedAtForAmount">Price $230</string>
    <string name="tvItemsFeedItemIsNowBeingOfferedAtAtCityCountry">in Sofia, Bulgaria</string>
    <string name="ivFeedPlaceImageDescription">Image of a place where an item is being sold</string>
    <string name="tvItemHasNowBeenFollowedBy"> has now been followed by </string>
    <string name="tvItemIsNowBeingFollowedByUserName"></string>
    <string name="tvItemsFeedItemIsNowBeingFollowedByTimeStamp">2 minutes ago</string>
    <string name="tvFeedUserJustSignedUp"> has just signed up to Katwalk </string>
    <string name="tvFeedUserJustSignedUpTimestamp">2 minutes ago</string>
    <string name="tvFeedUserJustSignedUpUserName">Jake Washington</string>
    <string name="bFeedUserHasJustSignedUpViewProfile">View Profile</string>
    <string name="bFeedUserHasJustSignedUpMessage">Message</string>
    <string name="bFeedUserChangedQuoteMessage">Message</string>
    <string name="bFeedUserChangedQuoteViewProfile">View Profile</string>
    <string name="tvFeedUserChangedQuoteTimestamp">2 minutes ago</string>
    <string name="tvFeedUserChangedQuote">To be second means to be the first among the losers</string>
    <string name="tvFeedUserChangedQuoteUserName">Jake Washington</string>
    <string name="tvFeedUserJustGotItem"> has just gotten a </string>
    <string name="tvFeedUserJustGotItemUserName"></string>
    <string name="tvFeedUserJustGotItemItemName">Samsung Galaxy</string>
    <string name="tvFeedUserJustGotItemTimestamp">2 minutes ago</string>
    <string name="tvFeedUserIsNowFriendsWith"> is now friends with </string>
    <string name="tvFeedUserIsNowFriendsWithFriendOneUsername">Jake Washington</string>
    <string name="tvFeedUserIsNowFriendsWithFriendTwoUsername">George Chaplin</string>
    <string name="bFeedUsersViewProfileOfFriendOne">View Profile</string>
    <string name="bFeedUsersViewProfileOfFriendTwo">View Profile</string>
    <string name="tvUserRatedXYstars"> rated </string>
    <string name="tvFeedUserHasRatedItemUsername">User Userski</string>
    <string name="tvFeedUserHasRatedItemItemname">Samsung Galaxy</string>
    <string name="tvFeedUserHasRatedItemTimeStamp">2 minutes ago</string>
    <string name="tvFeedUserHasRatedItemRatingValue">His rating: 8/10</string>
    <string name="tvFeedUserHasRatedItemRatingGlobalValue">Global rating: 10/10</string>
    <string name="tvFeedUserHasCommentedOnItem">commented on</string>
    <string name="tvFeedUserHasCommentedOnItemUsername">User Userski</string>
    <string name="tvFeedUserHasCommentedOnItemItemName">Samsung Galaxy</string>
    <string name="tvFeedUserHasCommentedOnItemTimestamp">2 minutes ago</string>
    <string name="tvFeedUserHasCommentedOnItemCommentContent">His comment: Is is nice and the battery is lasting days, believe it or not I dont care. Go Kimi Raikkonen</string>
    <string name="tvFeedUserHasCommentedOnItemViewAllComments">View all comments</string>
    <string name="tvFeedUserNoLongerHas">no longer has</string>
    <string name="tvFeedUserNoLongerHasUsername">User Userski</string>
    <string name="tvFeedUserNoLongerHasItemName">Samsung Galaxy</string>
    <string name="tvFeedUserNoLongerHasTimestamp">2 minutes ago</string>
    <string name="tvFeedUserNoLongerHasReason">because he lost it :(</string>
    <string name="tvFeedUserSellsTheir"> sells his </string>
    <string name="tvFeedUserSellsTheirUsername">User Userski</string>
    <string name="tvFeedUserSellsTheirItemName">Samsung Galaxy</string>
    <string name="tvFeedUserSellsTheirTimestamp">2 minutes ago</string>
    <string name="tvFeedUserSellsTheirPrice">For $340</string>
    <string name="tvFeedUserSellsTheirAtCityCountry">at Sofia, Bulgaria</string>
    <string name="bFeedUserSellsTheirViewItem">View Item</string>
    <string name="bFeedUserSellsTheirMessage">Message</string>
    <string name="bFeedUserSellsTheirBuy">Buy</string>
    <string name="tvUserEnviesXForY"> envies this purchase </string>
    <string name="tvFeedUserFollows"> is now following </string>
    <string name="tvFeedUserFollowsUsername">User Userski</string>
    <string name="tvFeedUserFollowsItemName">Samsung Galaxy</string>
    <string name="tvFeedUserFollowsTimestamp">2 minutes ago</string>
    <string name="tvFeedUserGainedStatus"> has just gained a status of </string>
    <string name="tvFeedUserGainedStatusUsername">User Userski</string>
    <string name="tvFeedUserGainedStatusStatusName">Bigshot</string>
    <string name="tvFeedUserGainedStatusDescription">You can not stop until there are no more money to spend, do you? And all those nice things in your collection are a proof for that ;)</string>
    <string name="tvFeedUserGainedStatusTimestamp">2 minutes ago</string>
    <string name="tvFeedUserIsGivingXAwayForFree"> is now giving this away for free. Who wants it?</string>
    <string name="tvFeedUserIsGivingXAwayForFreeUsername">User Userski</string>
    <string name="tvFeedUserIsGivingXAwayForFreeItemName">Samsung Galaxy</string>
    <string name="tvFeedUserIsGivingXAwayForFreeTimestamp">2 minutes ago</string>
    <string name="tvFeedUserIsGivingXAwayForFreeAtCityCountry">at Sofia, Bulgaria</string>
    <string name="bFeedUserIsGivingXAwayForFreeIWantIt">I Want It</string>
    <string name="tvFeedPlaceIsNowOpenAtX">is now open for customers</string>
    <string name="tvFeedPlaceIsNowOpenAtXPlaceName">The Grand Mall</string>
    <string name="tvFeedPlaceIsNowOpenAtXAtCityCountry">in Sofia, Bulgaria</string>
    <string name="tvFeedPlaceIsNowOpenAtXRandomItemName">Samsung Galaxy</string>
    <string name="tvFeedPlaceIsNowOpenAtXRandomItemBeingOffered">is one of the items offered there</string>
    <string name="bAnotherUserProfileMessage">Message</string>
    <string name="bAnotherUserProfileAddFriend">Add Friend</string>
    <string name="tvChangeUserQuoteTitle">Change your profile quote. Max 70 characters allowed.</string>
    <string name="etChangeUserQuoteContent">Type Quote Here</string>
    <string name="bChangeUserQuoteSubmit">Submit</string>
    <string name="bChangeUserQuoteCancel">Cancel</string>
    <string name="tvDeleteAccountDialogTitle">Are You Sure you want to delete your account? This action is irreversible! If you are sure you want to do this, please type in your password first.</string>
    <string name="cbDeleteAccountDeleteItemImagesAsWell">Also, delete the item images I\'ve uploaded from those items\' public profiles.</string>
    <string name="bDeleteAccountCancel">Cancel</string>
    <string name="bDeleteAccountSubmit">Delete My Account</string>
    <string name="etDeleteAccountPassword">Type your password</string>
</resources>