<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/feed_item_margin"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/feed_item_padding"
    android:paddingLeft="@dimen/feed_item_padding"
    android:paddingRight="@dimen/feed_item_padding"
    android:paddingTop="@dimen/feed_item_padding" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/iFeedItemIsNowOfferedAtItemImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ivFeedItemImageDescription"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/images_default_product" />

        <ImageButton
            android:id="@+id/iFeedItemItemIsNowOfferedAtPlaceImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ivFeedPlaceImageDescription"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/images_default_shop" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/tvItemFeedItemIsNowBeingOfferedAtItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:singleLine="true"
            android:text="@string/tvItemFeedItemIsNowBeingOfferedAtItemName"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemIsBeingOfferedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tvItemIsBeingOfferedAt"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvItemFeedItemIsNowBeingOfferedAtPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tvItemFeedItemIsNowBeingOfferedAtPlaceName"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemsFeedItemIsNowBeingOfferedAtTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tvItemsFeedItemIsNowBeingOfferedAtTimeStamp"
            android:textColor="@color/light_grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvItemsFeedItemIsNowBeingOfferedAtForAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tvItemsFeedItemIsNowBeingOfferedAtForAmount"
            android:textColor="@color/yellow"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemsFeedItemIsNowBeingOfferedAtAtCityCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/tvItemsFeedItemIsNowBeingOfferedAtAtCityCountry"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" >

        <Button
            android:id="@+id/bItemsFeedActionButton1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            style="@style/feed_button_style"
            android:text="@string/bItemsFeedActionButtonRate"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bItemsFeedActionButton2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            style="@style/feed_button_style"
            android:text="@string/bItemsFeedActionButtonComment"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bItemsFeedActionButton3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            style="@style/feed_button_style"
            android:text="@string/bItemsFeedActionButtonFollow"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bItemsFeedActionButton4"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            style="@style/feed_button_style"
            android:text="@string/bPeopleFeedActionButtonBuy"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </TableRow>

</LinearLayout>