<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvChangeUserQuoteTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tvChangeUserQuoteTitle"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etChangeUserQuoteContent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/etChangeUserQuoteContent"
        android:background="@android:color/white"
        android:inputType="text" />

    <Button
        android:id="@+id/bChangeUserQuoteSubmit"
        style="@style/green_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/bChangeUserQuoteSubmit"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bChangeUserQuoteCancel"
        style="@style/purple_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/bChangeUserQuoteCancel"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

</LinearLayout>